--- a/App.css
+++ b/App.css
@@ -27,9 +27,9 @@
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (prefers-reduced-motion: n-preference)
+:nth-of-type(2) .l
+    animation: logospin infinite 20s linear;
   }
 }
 
